@@ -1,4 +1,4 @@
-# GETools
+# GETools v0.0.10
 Free animation tool for Autodesk Maya 2020+
 
 Here you can find different tools for specific cases, from simple tools for locator creation to complex tools for secondary animation generating and center of mass.
